--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "displayName": "dax",
     "description": "support for dax",
     "version": "0.0.1",
+    "publisher": "jianfajun",
     "engines": {
         "vscode": "^1.29.0"
     },
